--- a/style.css
+++ b/style.css
@@ -9,6 +9,86 @@
     align-self: center;
   }
 
+  .pavadinimas {
+    color:red;
+    margin-top:10px;
+    margin-left:40px;
+    font-size:30px;
+    position:relative;
+    top:20px;
+  }
+
+
+  .googbtn {
+    font-size:15px;
+    border:none;
+    padding: 10px 20px;
+    margin-right:5px;
+    display: flex;
+    vertical-align: top;
+    justify-content: right;
+    margin-top: 120px;
+    height: 34px;
+    align-self: center;
+    position: absolute;
+    top: -100px;
+    right: 120px;
+  }
+
+  .imgbtn {
+    font-size:15px;
+    border:none;
+    padding: 10px 20px;
+    margin-right:5px;
+    display: flex;
+    vertical-align: top;
+    justify-content: right;
+    margin-top: 120px;
+    height: 34px;
+    align-self: center;
+    position: absolute;
+    top: -100px;
+    right: 0px;
+  }
+
+  .pav2 {
+    margin-bottom:30px;
+  }
+
+
+  .textinput {
+    border-radius: 30px;
+    border: 1px solid rgb(212, 211, 211);
+    margin-left:20px;
+    align-items: right;
+    justify-content: right;
+    height: 34px;
+    align-self: right;
+    width:600px;
+    padding:10px;
+    margin-bottom:10px;
+  }
+
+  #adc {
+    background-color: #f5f5f5;
+    font-size:15px;
+    color:#707070;
+    border:none;
+    padding: 10px 20px;
+    margin-left:5px;
+    margin-top:20px;
+  }
+
+  .field {
+
+    align-items: center;
+    justify-content: left;
+    align-self: center;
+    margin-top: 160px;
+    margin-left: 200px;
+    padding: 10px 20px;
+  }
+
   .searchbar input {
    padding: 17px;
 }
@@ -101,3 +181,46 @@
     margin-left: -2px;
 }
 
+.advanced {
+  font-size:15px;
+  border:none;
+  padding: 10px 20px;
+  margin-right:5px;
+  display: flex;
+  vertical-align: top;
+  justify-content: right;
+  margin-top: 120px;
+  height: 34px;
+  align-self: center;
+  position: absolute;
+  top: -100px;
+  right: 120px;
+}
+
+.googbtn1 {
+  font-size:15px;
+  border:none;
+  padding: 10px 20px;
+  margin-right:5px;
+  display: flex;
+  vertical-align: top;
+  justify-content: right;
+  margin-top: 120px;
+  height: 34px;
+  align-self: center;
+  position: absolute;
+  top: -100px;
+  right: 0px;
+}
+
+#adv:hover{
+  border: 1px solid #f1f1f1;
+  padding: 9px 19px;
+  color: rgb(0, 0, 0);
+  background-color: rgb(243, 241, 241);
+}
+
+.advanced:focus{
+  border:1px solid #4885ed;
+  padding: 9px 19px;
+}
